# chatroom_rust

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  docker-compose.yml  todo.md
.github/workflows/: e2e-tests.yml
claudedocs/: CQRS_IMPLEMENTATION.md  data-models-implementation-analysis.md  domain-layer-implementation-report.md  infrastructure-layer-implementation-report.md  web-api-implementation-report.md
config/: default.yml  local.yml.example
crates/application/: Cargo.toml
crates/application/src/: bcrypt.rs  broadcaster.rs  clock.rs  delivery.rs  dto.rs  error.rs  errors.rs  event_storage.rs  lib.rs  local_broadcast.rs  password.rs  presence.rs  rate_limiter.rs  repository.rs  sequencer.rs  stats_collector.rs
crates/application/src/cqrs/: application.rs  buses.rs  commands.rs  container.rs  dtos.rs  events.rs  mod.rs  queries.rs
crates/application/src/cqrs/handlers/: chatroom_command_handler.rs  chatroom_query_handler.rs  mod.rs  organization_command_handler.rs  user_command_handler.rs  user_query_handler.rs
crates/application/src/cqrs/services/: auth_service.rs  chatroom_service.rs  mod.rs  organization_service.rs
crates/application/src/services/: bulk_user_service.rs  chat_room_service.rs  chat_room_service_tests.rs  chat_service.rs  feature_flag_service.rs  message_history_service.rs  message_history_service_tests.rs  message_service.rs  message_service_tests.rs  mod.rs  organization_service.rs  password_service.rs  stats_service.rs  tests.rs  user_service.rs  user_service_tests.rs
crates/application/tests/: concurrent_consistency_test.rs  rate_limiter_integration_test.rs  redis_stream_integration_test.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: business_rules.rs  chat_room.rs  errors.rs  feature_flags.rs  lib.rs  message.rs  message_delivery.rs  organization.rs  repository.rs  room_member.rs  user.rs  value_objects.rs
crates/domain/src/entities/: auth.rs  bot.rs  chatroom.rs  department.rs  file_upload.rs  message.rs  mod.rs  notification.rs  online_statistics.rs  organization.rs  position.rs  proxy.rs  roles_permissions.rs  room_member.rs  user.rs  user_position.rs  websocket.rs
crates/domain/src/events/: chat_event.rs  mod.rs
crates/domain/src/repositories/: chatroom_repository.rs  file_upload_repository.rs  message_repository.rs  mod.rs  notification_repository.rs  room_member_repository.rs  session_repository.rs  statistics_repository.rs  user_repository.rs
crates/domain/src/services/: auth_service.rs  auth_service_test.rs  chatroom_service.rs  mod.rs  online_time_service.rs  organization_service.rs  password_service.rs  proxy_service.rs  user_management_service.rs  websocket_service.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: auth.rs  broadcast.rs  builder.rs  config.rs  delivery.rs  event_storage.rs  events.rs  fallback_broadcaster.rs  lib.rs  password.rs  presence_storage.rs  repository.rs  retry.rs  simple_transaction.rs  stats_aggregation.rs  unified_stats_aggregator.rs  websocket.rs
crates/infrastructure/src/db/: mod.rs
crates/infrastructure/src/db/repositories/: chatroom_repository_impl.rs  file_upload_repository_impl.rs  message_repository_impl.rs  mod.rs  notification_repository_impl.rs  room_member_repository_impl.rs  session_repository_impl.rs  statistics_repository_impl.rs  user_repository_impl.rs
crates/infrastructure/src/kafka/: consumer.rs  error.rs  mod.rs  producer.rs
crates/infrastructure/src/redis/: error.rs  mod.rs  publisher.rs  subscriber.rs
crates/infrastructure/tests/: admin_message_test.rs  delivery_test.rs  fallback_test.rs  message_persistence_test.rs  pg_repository.rs  rbac_integration_test.rs  transaction_test.rs
crates/main/: Cargo.toml
crates/main/src/: main.rs
crates/stats-aggregator/: Cargo.toml
crates/stats-aggregator/src/: main.rs
crates/stats-aggregator/tests/: integration_test.rs
crates/stats-consumer/: Cargo.toml
crates/stats-consumer/src/: event_storage.rs  lib.rs  main.rs  pg_event_storage.rs
crates/stats-consumer/tests/: e2e_flow_test.rs  integration_test.rs
crates/tests/: Cargo.toml  README.md
crates/tests/src/: auth_websocket_integration.rs  e2e_tests.rs  integration_test.rs  jwt_integration.rs  lib.rs  performance_tests.rs  test_data_factory.rs  test_environment.rs  test_utils.rs  websocket_client.rs
crates/web-api/: Cargo.toml
crates/web-api/src/: admin_routes.rs  app_config.rs  auth.rs  bulk_user_routes.rs  error.rs  lib.rs  org_routes.rs  routes.rs  state.rs  stats_routes.rs  websocket.rs  ws_connection.rs
crates/web-api/tests/: e2e_smoke.rs  logout_flow.rs  mvp_flow.rs  presence_flow.rs  ws_flow.rs
crates/web-api/tests/support/: mod.rs
docs/: 01-overview-and-architecture.md  02-domain-layer-design.md  03-application-layer-design.md  04-infrastructure-layer-design.md  05-web-api-layer-design.md  06-data-models-design.md  07-error-handling-and-testing.md  08-websocket-message-protocol.md  README.md  deployment.md
docs/features/: 用户在线统计.md  组织架构与批量用户管理.md
docs_new/: architecture-mvp.md
migrations/: 0001_init.sql  0002_enums.sql  0002_message_delivery.sql  0003_presence_stats.sql  0004_add_superuser.sql  0005_organizations.sql  0006_users_org_fields.sql  0007_rooms_org_fields.sql  0008_presence_events_org_path.sql  0009_bulk_tasks.sql  0010_stats_aggregated_refactor.sql  001_create_users_table.sql  002_create_chat_rooms_table.sql  003_create_messages_table.sql  004_user_extensions_and_partitions.sql  005_add_missing_user_fields.sql  006_add_room_private_features.sql  007_create_room_members_table.sql  008_add_message_reply_features.sql  009_create_sessions_table.sql  010_create_file_uploads_table.sql  011_create_notifications_table.sql  012_create_system_stats_tables.sql
perf/: k6-login.js
scripts/: reset_dev_db.sh  reset_dev_db.sql  run-e2e-tests.sh  run-stats-aggregator.sh  run-stats-consumer.sh
tests/: rbac_integration_test.rs
tests/integration/: multi_instance_test.rs
