[workspace]
members = [
    "crates/domain",
    "crates/application", 
    "crates/infrastructure",
    "crates/web-api",
    "crates/main"
]

resolver = "2"

[workspace.dependencies]
# 异步运行时和网络框架
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8", features = ["macros", "ws"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# 序列化和反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"

# 日志和追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 数据库相关
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "time"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

# 测试工具
mockall = "0.13"

# 密码哈希
bcrypt = { version = "0.17" }

# Kafka 消息队列
rdkafka = { version = "0.38", features = ["cmake-build", "ssl-vendored"] }

# Redis 缓存和 Pub/Sub
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }

# Futures 工具库
futures-util = { version = "0.3", default-features = false }

# JWT 认证
jsonwebtoken = "9.3"
ring = "0.17"

# WebSocket 支持
tokio-tungstenite = "0.27"
tungstenite = "0.28"

toml = "0.9"

# 验证器
validator = { version = "0.20", features = ["derive"] }
validator_derive = "0.20"

# 随机数生成
rand = "0.9"

# 异步特征
async-trait = "0.1"

# HTTP 客户端（用于集成测试）
reqwest = { version = "0.12", features = ["json"] }

# 测试容器和工具
testcontainers = { version = "0.25"}
testcontainers-modules = { version = "0.13", features = ["postgres", "redis", "kafka"] }
wiremock = "0.6"
futures = "0.3"

once_cell = "1"
figment = { version = "0.10", features = ["env", "toml", "yaml", "json"] }
notify = { version = "8", default-features = false, features = ["macos_fsevent", "serde"] }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
