[package]
name = "application"
version.workspace = true
edition.workspace = true

[dependencies]
domain = { path = "../domain" }
async-trait = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
redis = { workspace = true, features = ["aio", "tokio-comp"] }
tokio = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
bcrypt = { workspace = true }
