[package]
name = "application"
version.workspace = true
edition.workspace = true

[dependencies]
domain = { path = "../domain" }
config = { path = "../config" }
async-trait = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
redis = { workspace = true, features = ["aio", "tokio-comp"] }
tokio = { workspace = true }
tracing = { workspace = true }
tokio-stream = "0.1"
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "time"], optional = true }

[features]
default = []
sqlx = ["dep:sqlx"]

[dev-dependencies]
futures = "0.3"
