[package]
name = "config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
figment = { workspace = true, features = ["yaml", "env"] }

[dev-dependencies]