[package]
name = "domain"
version.workspace = true
edition.workspace = true


[dependencies]
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
