[package]
name = "domain"
version.workspace = true
edition.workspace = true


[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
sqlx = { workspace = true }  # 添加 sqlx 支持

[dev-dependencies]
mockall = { workspace = true }
