[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true

[dependencies]
domain = { path = "../domain" }
tokio = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
config = { workspace = true }
tracing = { workspace = true }
rdkafka = { workspace = true }
redis = { workspace = true }
futures-util = { workspace = true }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
validator = { workspace = true }
tokio-tungstenite = { workspace = true }
tungstenite = { workspace = true }
