[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true

[dependencies]
application = { path = "../application" }
config = { path = "../config" }
domain = { path = "../domain" }
tokio = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bcrypt = { workspace = true }
redis = { workspace = true }  # 添加 Redis 支持
serde_json = { workspace = true }  # 用于消息序列化
tokio-stream = "0.1"  # 用于异步流处理
async-stream = "0.3"  # 用于创建异步流

[features]
default = []
enterprise = []

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres"] }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "time"] }
uuid = { workspace = true }
time = { workspace = true }
chrono = { workspace = true }
