[package]
name = "chatroom"
version.workspace = true
edition.workspace = true

[[bin]]
name = "chatroom"
path = "src/main.rs"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
web-api = { path = "../web-api" }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true, features = ["aio", "tokio-comp"] }
bcrypt = { workspace = true }