[package]
name = "stats-consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
# 应用层依赖
application = { path = "../application" }
config = { path = "../config" }
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# Redis 客户端
redis = { workspace = true, features = ["tokio-comp", "streams"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
anyhow = "1.0"

# 时间
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# 异步特征
async-trait = "0.1"

# SQL
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }