[package]
name = "web-api"
version.workspace = true
edition.workspace = true

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
async-trait = {workspace = true}
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
once_cell = { workspace = true }
figment = { workspace = true }
notify = { workspace = true }
toml = {workspace = true}
validator = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
tokio-stream = "0.1"  # 添加 tokio-stream 支持
thiserror = { workspace = true }  # 添加 thiserror 支持
jsonwebtoken = { workspace = true }  # 添加 JWT 支持

[dev-dependencies]
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
tokio-tungstenite = { workspace = true }
